[package]
name = "coap_demo"
version = "0.1.0"
authors = ["Christian M. Amsüss <ca@etonomy.org>"]
publish = false

edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
embedded-hal = "0.2.2"
riot-sys = "^0.7"
riot-wrappers = { version = "^0.7", features = [ "with_coap_message", "with_coap_handler", "with_embedded_nal" ] }
riot-shell-commands = { git = "https://gitlab.com/etonomy/riot-module-examples", features = ["saul", "ztimer"] }

coap-message = "0.3.1"
coap-handler = "0.2.0"
coap-handler-implementations = "0.4"

embedded-nal = "^0.6"
